k8s/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: rental
spec:
  selector:
    matchLabels: { app: mysql }
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels: { app: mysql }
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          args: ["--default-authentication-plugin=mysql_native_password"]
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources: { requests: { storage: 5Gi } }  # uses DO default storage class
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: rental
spec:
  clusterIP: None
  selector: { app: mysql }
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
